# RouletteRecorder

./: .gitignore  .pdm-python  LICENSE  README.md  RouletteRecorder.sln  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-python/: action.yml
.github/workflows/: build.yml  cron.yml  opcode-cn.yml  opcode.yml
RouletteRecorder/: Config.cs  Data.cs  ILRepack.Config.props  RecorderInit.cs  RouletteRecorder.csproj  app.config  packages.config
RouletteRecorder.DataGen/: Program.cs  RouletteRecorder.DataGen.csproj
RouletteRecorder.Packer/: Program.cs  RouletteRecorder.Packer.csproj
RouletteRecorder.Packer/Properties/: AssemblyInfo.cs
RouletteRecorder/.github/workflows/: build.yml
RouletteRecorder/Constant/: LogType.cs  OpcodeChina.cs  OpcodeGlobal.cs  OpcodeStorage.cs  Region.cs
RouletteRecorder/DAO/: Roulette.cs
RouletteRecorder/Models/: ConfigData.cs  InstanceData.cs  ItemName.cs  JobName.cs  WorldData.cs
RouletteRecorder/Monitors/: GameMonitor.cs  MonitorType.cs  NetworkMonitor.cs
RouletteRecorder/Network/DungeonLogger/: DungeonLoggerClient.cs
RouletteRecorder/Network/DungeonLogger/Structures/: Auth.cs  Response.cs  StatMaze.cs  StatProf.cs  UserInfo.cs
RouletteRecorder/Properties/: AssemblyInfo.cs
RouletteRecorder/Utils/: BindingTarget.cs  Database.cs  Helper.cs  Injector.cs  Log.cs  ParsePlugin.cs  RouletteSingleton.cs
RouletteRecorder/ViewModels/: DungeonLoggerSetting.cs  MainViewModel.cs
RouletteRecorder/Views/: DugeonLoggerSetting.xaml  DugeonLoggerSetting.xaml.cs  MainControl.xaml  MainControl.xaml.cs
RouletteRecorder/data/: instance.json  job.json  roulette.json
RouletteRecorderConsole/: App.config  Program.cs  RouletteRecorderConsole.csproj  ServerInterface.cs
RouletteRecorderConsole/Properties/: AssemblyInfo.cs
RouletteRecorderPayload/: Main.cs  RouletteRecorderPayload.csproj  SigScanner.cs  app.config
RouletteRecorderPayload/Properties/: AssemblyInfo.cs
scripts/: consts.py  dump_job.py  dump_roulette.py  extract_instance.py  extract_roulette.py  update_opcode.py  update_opcode_cn.py  utils.py
