[project]
name = "roulette"
version = "0.1.0"
authors = [{ name = "StarHeartHunt", email = "starheart233@gmail.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.20.0,<1.0.0,!=0.28.0"]

[dependency-groups]
dev = ["ruff>=0.8.0"]

[tool.pdm.scripts]
instance = { cmd = "python scripts/dump_instance.py" }
job = { cmd = "python scripts/dump_job.py" }
roulette = { cmd = "python scripts/dump_roulette.py" }
opcode = { cmd = "python scripts/update_opcode.py" }
opcode-cn = { cmd = "python scripts/update_opcode_cn.py" }

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "I",     # isort
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "TC",    # flake8-type-checking
    "TID",   # flake8-tidy-imports
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
pythonPlatform = "All"

typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true

[tool.setuptools]
py-modules = []
